test/users/wmikanik/domain64-badworkaround.good
domain64-badworkaround.chpl:8: error: invalid copy-initialization
domain64-badworkaround.chpl:8: error: range(boundedType=bounded) cannot be initialized from range(boundedType=boundedNone)
